--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -267,7 +267,7 @@ textarea {
 
       .meta-title {
         font-weight: $font-weight-semi-bold;
-
+        display: block;
       }
 
       .meta-value {
