--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4250,19 +4250,28 @@ span.checkbox {
 
 .checklist-container {
   position: relative;
-  margin: .6em 0 2em; }
+  margin: .6em 0 1.2em;
+  background: rgba(255, 255, 255, 0.1);
+  padding: .6em;
+  -webkit-border-radius: 3px;
+          border-radius: 3px; }
   .checklist-container h2 .title {
     color: #fff7b8; }
   .checklist-container .checklist-counts {
     position: absolute;
-    top: 0;
-    right: 0; }
+    top: .6em;
+    right: .6em; }
+  .checklist-container ul {
+    border-top: 1px dotted rgba(255, 255, 255, 0.3);
+    padding-top: .6em; }
   .checklist-container .checklist-entry {
     position: relative;
     line-height: 1.3em;
     margin-bottom: .5em;
     padding-left: 1.5em;
     font-size: 90%; }
+    .checklist-container .checklist-entry:last-child {
+      margin-bottom: 0; }
     .checklist-container .checklist-entry a, .checklist-container .checklist-entry .fa {
       color: rgba(255, 255, 255, 0.8);
       cursor: pointer; }
@@ -4278,11 +4287,16 @@ span.checkbox {
     width: 100%;
     height: 1.5em;
     background: rgba(255, 255, 255, 0.1);
-    margin: .6em 0;
-    text-align: right; }
+    margin: .6em 0 .8em;
+    text-align: right;
+    -webkit-border-radius: 3px;
+            border-radius: 3px;
+    overflow: hidden; }
     .checklist-container .progress-bar-container .bar {
       background: rgba(146, 243, 139, 0.4);
-      height: 100%; }
+      height: 100%;
+      -webkit-border-radius: 3px;
+              border-radius: 3px; }
     .checklist-container .progress-bar-container .percentage {
       line-height: 1.5em;
       padding: 0 .35em; }
