--- a/sass/_binded_trigger_box.scss
+++ b/sass/_binded_trigger_box.scss
@@ -1318,10 +1318,14 @@ $alertRed : rgba(208, 106, 106, 1);
 }
 
 $barGreen : #92f38b;
+$checklistEntryColor : #fff;
 
 .checklist-container {
   position: relative;
-  margin: .6em 0 2em;
+  margin: .6em 0 1.2em;
+  background: rgba($checklistEntryColor, .1);
+  padding: .6em;
+  border-radius: 3px;
 
   h2 {
 
@@ -1333,11 +1337,15 @@ $barGreen : #92f38b;
 
   .checklist-counts {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: .6em;
+    right: .6em;
   }
 
-  $checklistEntryColor : #fff;
+
+  ul {
+    border-top: 1px dotted rgba(255, 255, 255, .3);
+    padding-top: .6em;
+  }
 
   .checklist-entry {
     position: relative;
@@ -1345,6 +1353,10 @@ $barGreen : #92f38b;
     margin-bottom: .5em;
     padding-left: 1.5em;
     font-size: 90%;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     a, .fa {
       color: rgba($checklistEntryColor, .8);
@@ -1372,12 +1384,15 @@ $barGreen : #92f38b;
     width: 100%;
     height: 1.5em;
     background: rgba(255, 255, 255, .1);
-    margin: .6em 0;
+    margin: .6em 0 .8em;
     text-align: right;
+    border-radius: 3px;
+    overflow: hidden;
 
     .bar {
       background: rgba($barGreen, .4);
       height: 100%;
+      border-radius: 3px;
     }
 
     .percentage {
